More changes
Removed callbacks as those are unnecessary
Synchronized all Dispatcher methods
Added some documentation
Code cleanup